[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "option_combos"
version = "0.9.1"
dependencies = ["numpy", "pandas", "scipy"]
authors = [
           {name = "Jayanth R. Varma"},
           {name = "Vineet Virmani"}
          ]
maintainers = [{name = "Jayanth R. Varma", email = "jrvarma@gmail.com"}]
description = "Black Scholes for options portfolios combos"
readme = "README.md"
license = {text = "OSI Approved :: GNU General Public License (GPL)"}
keywords = ["Black Scholes", "Options" , "Option Greeks", "Option Portfolios",
            "Payoff Plots"]
classifiers=[
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3",
]
requires-python = ">= 3.0"

[project.urls]
Homepage = "https://github.com/jrvarma/option_combos"

[tool.setuptools]
packages = ["option_combos"]
